// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LandingHeader API 1`] = `
.c0 {
  height: 50px;
}

.c1 {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #FAFAFA;
  height: 50px;
  box-shadow: none;
  -webkit-transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<header
  className="c0"
  offset={40}
>
  <div
    className="c1"
  >
    <div>
      Content
    </div>
  </div>
</header>
`;

exports[`Storyshots LandingHeader NavItemBurger 1`] = `
.c6 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.dUUMVe > *:nth-child(2) .c5 {
  margin-top: 5px;
}

.pYtWd > .c5 {
  margin-top: 5px;
}

.sQyKx > .c5 {
  margin-top: 5px;
}

.c0 {
  height: 50px;
}

.c1 {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #FAFAFA;
  height: 50px;
  box-shadow: none;
  -webkit-transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c3 {
  height: 50px;
  padding: 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  color: #999A94;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
}

.c3:hover {
  color: #353630;
}

.c3 path {
  fill: currentColor;
}

.c4 {
  margin-right: 5px;
}

<header
  className="c0"
  offset={40}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <p
          className="c4 c5 c6"
        >
          children
        </p>
        <svg
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
    </div>
  </div>
</header>
`;

exports[`Storyshots LandingHeader NavItemDropdown 1`] = `
.c6 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.dUUMVe > *:nth-child(2) .c5 {
  margin-top: 5px;
}

.pYtWd > .c5 {
  margin-top: 5px;
}

.sQyKx > .c5 {
  margin-top: 5px;
}

.c0 {
  height: 50px;
}

.c1 {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #FAFAFA;
  height: 50px;
  box-shadow: none;
  -webkit-transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c3 {
  height: 50px;
  padding: 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  color: #999A94;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
}

.c3:hover {
  color: #353630;
}

.c3 path {
  fill: currentColor;
}

.c4 {
  margin-right: 5px;
}

.c7 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  -webkit-transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
  transition: transform 0.4s cubic-bezier(0.68,-0.55,0.27,1.55);
}

<header
  className="c0"
  offset={40}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
        onMouseOver={[Function]}
      >
        <p
          className="c4 c5 c6"
        >
          Language
        </p>
        <svg
          className="c7"
          fill="currentColor"
          height={18}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
          width={18}
        >
          <path
            d="M7.4 9.8l4.6 4.6 4.6-4.6 1.4 1.4-6 6-6-6 1.4-1.4z"
          />
        </svg>
      </div>
    </div>
  </div>
</header>
`;

exports[`Storyshots LandingHeader With Nav and NavItem 1`] = `
.c0 {
  height: 50px;
}

.c1 {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #FAFAFA;
  height: 50px;
  box-shadow: none;
  -webkit-transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c3 {
  height: 50px;
  padding: 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  color: #999A94;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
}

.c3:hover {
  color: #353630;
}

.c3 path {
  fill: currentColor;
}

.c4 {
  height: 50px;
  padding: 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  color: #353630;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
}

.c4:hover {
  color: #353630;
}

.c4 path {
  fill: currentColor;
}

.c5 {
  height: 50px;
  padding: 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  color: #999A94;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: default;
}

.c5:hover {
  color: #999A94;
}

.c5 path {
  fill: currentColor;
}

<header
  className="c0"
  offset={40}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <svg
          fill="currentColor"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        Nav Item 1
      </div>
      <div
        className="c4"
      >
        Nav Item 2 (active)
      </div>
      <div
        className="c5"
      >
        Nav Item 3 (disabled)
      </div>
    </div>
  </div>
</header>
`;

exports[`Storyshots LandingHeader With offset props 1`] = `
.c0 {
  height: 50px;
}

.c1 {
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #FAFAFA;
  height: 50px;
  box-shadow: none;
  -webkit-transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  transition: box-shadow cubic-bezier(0.47,0,0.75,0.72) 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<header
  className="c0"
  offset={160}
>
  <div
    className="c1"
  >
    offset 160
  </div>
</header>
`;
